[package]
name = "rustub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand="0.8.5"
criterion = "0.3"

[[bench]]
name = "linkedhashmap_benchmark"
harness = false

[lib]
name = "rustub"
path = "src/lib.rs"


[[bin]]
path = "src/main.rs"
name = "zero2prod"
